// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> component <Select/> is disabled 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className="react-dropdown-select-disabled react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={-1}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={true}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders correctly 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with clearable 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-clear"
      onClick={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      ×
    </div>
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with custom search function 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 3,
          }
        }
        tabIndex={-1}
        value="Zer"
      />
    </div>
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with loading 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-loading"
      style={
        {
          "--select-loading-color": "#0074D9",
        }
      }
    />
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with name 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <input
      defaultValue=""
      disabled={false}
      name="form-select"
      required={false}
      style={
        {
          "opacity": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      tabIndex={-1}
    />
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with separator 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#0074D9",
        "--select-color-shadow": "rgba(0, 116, 217, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-separator"
    />
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#0074D9",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Select/> component <Select/> renders with short color 1`] = `
<div>
  <div
    aria-expanded={false}
    aria-label="Dropdown select"
    className=" react-dropdown-select "
    onClick={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "--select-color": "#000",
        "--select-color-shadow": "rgba(0, 0, 0, 0.2)",
        "--select-direction": "ltr",
      }
    }
    tabIndex={0}
  >
    <div
      className="react-dropdown-select-content react-dropdown-select-type-single"
      onClick={[Function]}
    >
      <input
        className="react-dropdown-select-input "
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Select..."
        readOnly={false}
        style={
          {
            "--input-size": 9,
          }
        }
        tabIndex={-1}
        value=""
      />
    </div>
    <div
      className="react-dropdown-select-dropdown-handle react-dropdown-select-dropdown-handle-closed react-dropdown-select-dropdown-handle-no-rotate-open"
      onClick={[Function]}
      onKeyDown={[Function]}
      style={
        {
          "--select-handle-color": "#000",
        }
      }
      tabIndex={-1}
    >
      <svg
        fill="currentColor"
        viewBox="0 0 40 40"
      >
        <path
          d="M31 26.4q0 .3-.2.5l-1.1 1.2q-.3.2-.6.2t-.5-.2l-8.7-8.8-8.8 8.8q-.2.2-.5.2t-.5-.2l-1.2-1.2q-.2-.2-.2-.5t.2-.5l10.4-10.4q.3-.2.6-.2t.5.2l10.4 10.4q.2.2.2.5z"
        />
      </svg>
    </div>
  </div>
</div>
`;
